<resources>
    <string name="app_name">Book Rental</string>
    <string name="click_back_to_exit">Press back again to exit</string>
    <string name="str_no_new_arrivals">No new arrivals found.</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="common_message_under_development">This feature is under development and will be available in future releases.</string>
    <string name="common_message_coming_soon">Coming Soon</string>
    <string name="err_something_went_wrong">Something went wrong,please try again later.</string>
    <string name="hint_enter_shipping_address">Enter Shipping Address</string>
    <string name="hint_enter_billing_address">Enter Billing Address</string>
    <string name="member_ship">Member ship</string>
    <string name="member_ship_plan">Member ship plan</string>
    <string name="membership_type">Membership Type</string>
    <string name="gold">Gold</string>
    <string name="gold_Capital">GOLD</string>
    <string name="validity">Validity</string>
    <string name="from">From</string>
    <string name="june_2017">June 2017</string>
    <string name="to">To</string>
    <string name="april_2018">April 2018</string>
    <string name="amount">Amount</string>
    <string name="_4000">₹ 4000</string>
    <string name="membership_information">Membership Information</string>
    <string name="membership_detail">You get access to a wide range of benefits and services explore what’s available to you and ensure you’re making the most of your membership.</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="btn_save">Save</string>
    <string name="membership">MemberShip</string>
    <string name="wish_list">Wish List</string>
    <string name="personal_information">Personal Information</string>
    <string name="refer_friend">Refer Friend</string>
    <string name="order_history">Order History</string>
    <string name="remove">Remove</string>
    <string name="move_to_cart">Move to Cart</string>
    <string name="author">Author :</string>
    <string name="returnBook">Return</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="save_address">Save Address</string>
    <string name="cancel">Cancel</string>
    <string name="left_drawer_tv_home">Home</string>
    <string name="left_drawer_tv_rent">Rent</string>
    <string name="left_drawer_tv_shop">Shop</string>
    <string name="left_drawer_tv_search">Search Products</string>
    <string name="left_drawer_tv_wishlist">My Wishlist</string>
    <string name="left_drawer_tv_my_cart">My Cart</string>
    <string name="left_drawer_tv_history">My History</string>
    <string name="s">My Rewards</string>
    <string name="left_drawer_tv_membership">MemberShip</string>
    <string name="left_drawer_tv_my_account">My Account</string>
    <string name="left_drawer_tv_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="left_drawer_tv_logout">Logout</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Shop</string>
    <string name="rent">Rent</string>
    <string name="search">Search your Book Name, Author</string>
    <string name="shop_category">Categories for Shop</string>
    <string name="search_by_product">Search Product</string>
    <string name="no_found">No result found</string>
    <string name="rent_category">Categories for Rent</string>
    <string name="name">Name</string>
    <string name="product_list">Product List</string>
    <string name="dummy_text">Right after installing WooCommerce you may find you have an empty store. There are no products, orders, reviews, and more by default. We’ve done that so you can get started right away creating your own products and setting up WooCommerce exactly for the needs of your store.</string>
    <string name="description">Description</string>
    <string name="harry">Harry Potter</string>
    <string name="author_name">Author</string>
    <string name="sortby">Sort By</string>
    <string name="popular">Popular</string>
    <string name="low_to_high">Low to high</string>
    <string name="high_to_low">High to low</string>
    <string name="newest">Newest First</string>
    <string name="price">Price</string>
    <string name="min_price">Min Price :</string>
    <string name="max_price">Max Price :</string>
    <string name="category">Category</string>
    <string name="reset">Reset</string>
    <string name="edition">Edition</string>
    <string name="apply">Apply</string>
    <string name="buy_now">Buy Now</string>
    <string name="sort_filter">Sort and Filter</string>
    <string name="cart">Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="rental_cart">Rental Cart</string>
    <string name="share_text">Share Text</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="explore">Explore</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referance_code">Referance Code</string>
    <string name="profile_detail">Personal Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="zipcode">ZipCode</string>
    <string name="membership_option">Membership Option</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="viewer">Viewers</string>
    <string name="review">Reviews</string>
    <string name="check_out">Checkout</string>
    <string name="book_available">Available</string>
    <string name="order_history_details">Order Detail</string>
    <string name="book_total">Total amount : </string>
    <string name="book_id">Order Id : </string>
    <string name="book_no">No. of Books : </string>
    <string name="book_deliverd">Delivered On :</string>
    <string name="book_quantity">Quantity</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="billing_address">Billing Address :-</string>
    <string name="shipping_address">Shipping Address :-</string>
    <string name="dialogue_ok">OK</string>
    <string name="edit">Edit</string>
    <string-array name="book_edition">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="featured_books">Featured Books</string>
    <string name="products_for_you">Products for You</string>
    <string name="go_to_home">Go to Home</string>
    <string name="about_us">About Us</string>
    <string name="conatct_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="log_out">LogOut</string>
    <string name="dialog_logout">Are you sure you want to logout ?</string>
    <string name="rewards_point">Rewards Point</string>
    <string name="avalable_balance">Available Balance</string>
    <string name="my_rewards">My Rewards</string>
    <string name="_1_year">1 Year</string>
    <string name="_10000">₹ 10000</string>
    <string name="facility">Facility</string>
    <string name="_100_book_yr">100 books/yr</string>
    <string name="_30_book_yr">30 books/yr</string>
    <string name="sliver">Sliver</string>
    <string name="_4500">₹ 4500</string>
    <string name="_4_month">4 Month</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="left_drawer_tv_rewards">My Rewards</string>
    <string name="total">Total Amount :-</string>
    <string name="order_successfully">Your Order placed Successfully !</string>
    <string name="order_confirm">Order Confirmation</string>
    <string name="change_lang">Change Language</string>
    <string name="pages">Pages :</string>
    <string name="publication">Publication :</string>
    <string name="book_code">Bookcode :</string>
    <string name="remove_item">Are you sure want to remove ?</string>
    <string name="no_data_available">No Data Available</string>
    <string name="rental">Rental</string>
    <string name="book">Book</string>
    <string name="plan_duration">Plan Duration</string>
    <string name="registration">Registration</string>
    <string name="refundable">Refundable</string>
    <string name="_500">₹ 500</string>
    <string name="better_books_better_future">Better Books, Better Future</string>
    <string name="delivery">Delivery</string>
    <string name="o">0</string>
    <string name="discount">Discount</string>
    <string name="_10">10%</string>
    <string name="tariff">Tariff</string>
    <string name="_8599">8599</string>
    <string name="_8099">8099</string>
    <string name="total_payable">Total Payable</string>
    <string name="_300">₹ 300</string>
    <string name="_5000">5000</string>
    <string name="_5500">5500</string>
    <string name="do_you_want_to_receive_newsletter_from_the_site">Do you want to receive newsletter from the site?</string>
    <string name="have_any_referral_code">Have any Referral Code?</string>
    <string name="qty">Qty</string>
    <string name="duration">Duration</string>
    <string name="silver">SILVER</string>
    <string name="rs_8000">Rs. 8000</string>
    <string name="login_with">Login With</string>
    <string name="rs_5500">Rs. 5500</string>
</resources>