<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.webmyne.rentalapp.ui.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_image"
        android:scaleType="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash_background"/>

  <!--  <com.webmyne.rentalapp.custom.TfButton
        android:id="@+id/btnExplore"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:drawableRight="@drawable/ic_arrow_right"
        android:minHeight="@dimen/dimen_28dp"
        android:text="@string/explore"
        android:textColor="@color/white" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.webmyne.rentalapp.custom.TfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:text="@string/book"
                android:textColor="@color/white"
                android:textSize="@dimen/sp36" />

            <com.webmyne.rentalapp.custom.TfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rental"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp36" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:background="@drawable/login_edt"
            android:minHeight="@dimen/dimen_48dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:src="@drawable/ic_avatar"
                android:tint="@color/half_black" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="#00000000"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_14dp"
            android:background="@drawable/login_edt"
            android:minHeight="@dimen/dimen_48dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:src="@drawable/ic_key"
                android:tint="@color/half_black" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="#00000000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableRight="@drawable/eye_black"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <com.webmyne.rentalapp.custom.TfTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/sp14" />

        <com.webmyne.rentalapp.custom.TfButton
            android:id="@+id/btnSubmit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/create_profile_text" />

            <com.webmyne.rentalapp.custom.TfTextView
                android:id="@+id/tfTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen_8dp"
                android:paddingRight="@dimen/dimen_8dp"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/create_profile_text" />

        </LinearLayout>
        <com.webmyne.rentalapp.custom.TfTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login With"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:textAlignment="center"
            android:textSize="@dimen/sp14"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fb_btn"/>
            <Space
                android:layout_width="@dimen/dimen_26dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_btn"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_16dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.webmyne.rentalapp.custom.TfTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />

        <com.webmyne.rentalapp.custom.TfTextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginLeft="@dimen/dimen_6dp"
            android:textColor="@color/yellow"
            android:textSize="@dimen/sp18" />

    </LinearLayout>

</RelativeLayout>
